crabbing-interpreters/tests/testsuite/snapshots/testsuite__scope-craftinginterpreters__test__assignment__associativity.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/assignment/associativity.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (var a (global @3) "a")
   (var b (global @4) "b")
   (var c (global @5) "c")
   (expr (= (global a @3) (= (global b @4) (global c @5))))
   (print (global a @3))
   (print (global b @4))
   (print (global c @5)))

----- stderr -----
