crabbing-interpreters/tests/testsuite/snapshots/testsuite__scope-craftinginterpreters__test__assignment__global.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/assignment/global.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (var a (global @1) "before")
   (print (global a @1))
   (expr (= (global a @1) "after"))
   (print (global a @1))
   (print (= (global a @1) "arg"))
   (print (global a @1)))

----- stderr -----
