crabbing-interpreters/tests/testsuite/snapshots/testsuite__scope-craftinginterpreters__test__assignment__syntax.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/assignment/syntax.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (var a (global @1) "before")
   (var c (global @2) (= (global a @1) "var"))
   (print (global a @1))
   (print (global c @2)))

----- stderr -----
