crabbing-interpreters/tests/testsuite/snapshots/testsuite__scope-craftinginterpreters__test__assignment__undefined.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/assignment/undefined.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (expr (= (global-by-name unknown) "what")))

----- stderr -----
